intel/bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/log.txt
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:27:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:33:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:39:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:45:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:51:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:57:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:63:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:69:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:75:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:81:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:87:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:93:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:99:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:105:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:111:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:117:14: warning: shift count >= width of type [-Wshift-count-overflow]
    high = a >> 64;
             ^  ~~
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:125:20: error: default initialization of an object of const type 'const smallfelem' (aka 'int *const')
  const smallfelem small1;
                   ^
                          = nullptr
bench_214_new/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main/extr_.opensslcryptoececp_nistp256.c_smallfelem_mul_with_main.c:126:20: error: default initialization of an object of const type 'const smallfelem' (aka 'int *const')
  const smallfelem small2;
                   ^
                          = nullptr
16 warnings and 2 errors generated.
HLS FPGA Parse FAILED.
